@@ -10,7 +10,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -33,7 +32,7 @@ public class TenantDataProviderImpl implements TenantDataProvider {
     return pgClient.execute(tenantQuery, Tuple.of("%" + SUFFIX, table))
         .map(rowSet -> StreamSupport.stream(rowSet.spliterator(), false)
             .map(this::mapToTenant)
-            .collect(Collectors.toList()));
+            .toList());
   }
 
   private String mapToTenant(Row row) {
